only hosted libraries

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="js/draw_chords.js"></script>
     <script type="text/javascript" src="js/taxes.js"></script>
-    <script type="text/javascript" src="js/d3-queue.v2.min.js"></script>
-    <script type="text/javascript" src="js/underscore.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" charset="utf-8"></script>
 </head>
 
 <body>
